<resources>
    <string name="app_name">TellCom</string>

    //Login
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login_goole">Entrar com Conta Google</string>
    <string name="login">Entrar</string>
    <string name="forget_password">Esqueci a senha</string>
    <string name="register">Cadastrar-se</string>

    //Icons menu
    <string name="orders">Ordens de Serviço</string>
    <string name="new_order">Nova Ordem de Serviço</string>
    <string name="calendar">Calendario de OS</string>

    //Score
    <string name="provider_name">Nome do Provedor:</string>
    <string name="score">Score</string>
    <string name="job_name">Provedor</string>
    <string name="current_score">0</string>
    <string name="score_title">Configuração de Score</string>
    <string name="points_per_execution">Digite o valor de pontos por cada instalação concluída:</string>
    <string name="meta_score">Digite sua meta de pontos desejada:</string>
    <string name="score_number">0,0</string>
    <string name="meta">Meta:</string>
    <string name="points">Pontos:</string>

    //Save Order
    <string name="btn_save">Salvar</string>
    <string name="no_orders">Você não tem nenhuma Ordem de Serviço Registrada!</string>
    <string name="from_order_title">Nova Ordem de serviço</string>
    <string name="from_order_warning">Preencha todos os campos para registrar o serviço</string>
    <string name="from_order_name">Digite o nome do cliente:</string>
    <string name="from_order_drop">Digite a quantidade de Drop usado:</string>
    <string name="from_order_protocol_number">Digite o número do protocolo:</string>
    <string name="from_order_city">Digite a cidade:</string>

    //Row Order
    <string name="protocol_name">Protocolo: </string>
    <string name="client_name">Cliente: </string>
    <string name="drop_meters">Drop usado: </string>
    <string name="drop_meters_word">m</string>

    //DB
    <string name="save_error_tag">SaveError</string>
    <string name="save_error_message">Save Error</string>
    <string name="update_error_tag">UpdateError</string>
    <string name="update_error_message">Update Error</string>

    //Constants Strings
    <string name="filling_in_filds">Preencha todos os campos!</string>
    <string name="save_order">Ordem salva com sucesso!</string>
    <string name="save_score">Score salvo com sucesso!</string>
    <string name="save_order_fail">Falha ao salvar ordem!</string>
    <string name="save_score_fail">Falha ao salvar o score!</string>
    <string name="invalid_protocol_number">Número de Protocolo invalido!</string>
    <string name="protocol_number_requeried">O número do protocolo deve ter exatamente 8 caracteres</string>
    <string name="save_order_error_tag">Save error</string>
    <string name="save_order_error_message">Falha ao salvar a ordem!</string>
    <string name="save_score_error_tag">Update error</string>
    <string name="save_score_error_message">Falha ao atualizar as ordens!</string>
    <string name="update_error_order_tag">Update order error</string>
    <string name="update_error_order_message">Falha ao atualizar a ordem!</string>
    <string name="number_format_error">Erro ao converter valor para número.</string>
    <string name="recalculate_socre_error_tag">Erro do Cálculo .</string>
    <string name="recalculate_socre_error_message">Erro ao calcular o score!.</string>
    <string name="update_error_score_tag">Update order error</string>
    <string name="update_error_score_message">Falha ao atualizar o score!</string>
    <string name="delete_order_error_tag">erro ao deletar</string>
    <string name="delete_order_error_message">Não foi possível deletar a ordem de serviço!</string>

    //Alert Dialog
    <string name="alert_dialog_title">Confirmação</string>
    <string name="alert_dialog_message">Deseja realmente excluir esse pedido?</string>
    <string name="alert_dialog_positive">Sim</string>
    <string name="alert_dialog_negative">Não</string>
    <string name="filling_in_filds_toast_error">Erro ao converter valor para número.</string>

</resources>