<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tellcom.view.activitys.FormOrderActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_form_order_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_order_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/ll_form_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_protocol_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/from_order_protocol_number"
                android:inputType="number"
                android:maxLength="8"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_protocol_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:hint="@string/from_order_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:inputType="number"
                android:hint="@string/from_order_drop" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/btn_save_order"
        app:layout_constraintTop_toBottomOf="@id/ll_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/disquete" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/btn_save_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/btn_save"
        android:textStyle="italic"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>