<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_row_order"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_protocol_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol_name"
                android:layout_marginEnd="6dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/tv_protocol_numer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10125295"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/tv_protocol_name"/>

            <TextView
                android:id="@+id/tv_client_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client_name"
                android:layout_marginEnd="6dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_protocol_name"/>
            <TextView
                android:id="@+id/tv_order_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fulana da Silva Silveira"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/tv_protocol_numer"
                android:layout_toEndOf="@id/tv_client_name"/>

            <TextView
                android:id="@+id/tv_meter_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_meters"
                android:layout_marginEnd="6dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/tv_client_name"/>
            <TextView
                android:id="@+id/tv_drop_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="250"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_below="@id/tv_order_name"
                android:layout_toEndOf="@id/tv_meter_drop"/>
            <TextView
                android:id="@+id/tv_drop_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drop_meters_word"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_below="@id/tv_order_name"
                android:layout_toEndOf="@id/tv_drop_value"/>

            <CheckBox
                android:id="@+id/cb_done"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/verifica"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>
            <CheckBox
                android:id="@+id/cb_broken"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/rejeitado"
                android:paddingTop="6dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/cb_done"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>