<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tellcom.view.activitys.MainActivity">

    <View
        android:id="@+id/view_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:background="@drawable/shape_bg"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view_bg"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_marginTop="@dimen/_negative_80dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:layout_marginStart="@dimen/_25dp">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            app:cardCornerRadius="@dimen/_15dp"
            app:cardElevation="@dimen/_12dp"
            android:layout_margin="@dimen/_8dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ic_orders"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_80dp"
                    android:src="@drawable/icon_order"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/orders"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_margin="@dimen/_8dp"
            app:cardCornerRadius="@dimen/_15dp"
            app:cardElevation="@dimen/_12dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ic_new_order"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_80dp"
                    android:src="@drawable/icon_add_order"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/new_order"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_margin="@dimen/_8dp"
            app:cardCornerRadius="@dimen/_15dp"
            app:cardElevation="@dimen/_12dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ic_calendar"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_80dp"
                    android:src="@drawable/icon_calendar"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/calendar"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:layout_margin="@dimen/_8dp"
            app:cardCornerRadius="@dimen/_15dp"
            app:cardElevation="@dimen/_12dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ic_score"
                    android:layout_width="@dimen/_80dp"
                    android:layout_height="@dimen/_80dp"
                    android:src="@drawable/icon_order"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/score"
                    android:textSize="@dimen/_18sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>